# picongpu

./: .gitlab-ci.yml  .pre-commit-config.yaml  .zenodo.json  COPYING  INSTALL.rst  README.md  requirements_pre-commit.txt
.github/workflows/: ci.yml
buildsystem/CompileSuite/: color.sh  compileSet.sh  exec_helper.sh  help.sh  options.sh  path.sh
cmake/: CPM_0.40.2.cmake  riscv64-clang.toolchain.cmake  riscv64-gnu.toolchain.cmake
docs/: COMMIT.md  TBG_macros.cfg
docs/source/: conf.py  index.rst
etc/picongpu/: submitAction.sh
examples/: CMakeLists.txt
examples/native-cuda/source/: main.cu
examples/vectorAdd/: CMakeLists.txt
include/alpaka/: alpaka.hpp
include/mallocMC/: mallocMC.hpp
include/mpiInfo/: CMakeLists.txt
lib/python/: .gitignore  pyproject.toml
lib/python/picongpu/extra/input/: bunchInit_openPMD_bp.py  createBunch_example.ipynb  parameters.py  preparingInsightData.py  preparingInsightData_example.ipynb
lib/python/picongpu/extra/plugins/data/: base_reader.py  calorimeter.py  emittance.py  energy_histogram.py  phase_space.py  png.py  radiation.py  transitionradiation.py
lib/python/picongpu/extra/plugins/plot_mpl/: base_visualizer.py  emittance_evolution_visualizer.py  energy_histogram_visualizer.py  energy_waterfall_visualizer.py  slice_emittance_visualizer.py  slice_emittance_waterfall_visualizer.py
lib/python/picongpu/extra/utils/: field_ionization.py  find_time.py
lib/python/picongpu/extra/utils/FLYonPICRateCalculationReference/: BoundBoundTransitions.py  BoundFreeCollisionalTransitions.py  BoundFreeFieldTransitions.py  calculatorMain.py
lib/python/picongpu/picmi/: __init__.py  copy_attributes.py  dispersive_pulse_laser.py  energy_histogram.py  gaussian_laser.py  grid.py  layout.py  macro_particle_count.py  phase_space.py  plane_wave_laser.py  requirements.txt  simulation.py  solver.py  species.py  species_requirements.py
lib/python/picongpu/picmi/diagnostics/: __init__.py  auto.py  backend_config.py  binning.py  checkpoint.py  energy_histogram.py  field_dump.py  macro_particle_count.py  particle_dump.py  particle_functor.py  phase_space.py  png.py  radiation.py  timestepspec.py  unit_dimension.py  util.py
lib/python/picongpu/picmi/distribution/: AnalyticDistribution.py  CylindricalDistribution.py  CylyndricalDistribution.py  Distribution.py  FoilDistribution.py  GaussianBunchDistribution.py  GaussianDistribution.py  UniformDistribution.py  __init__.py
lib/python/picongpu/picmi/interaction/: __init__.py  collision.py  synchrotron.py
lib/python/picongpu/picmi/interaction/ionization/: groundstateionizationmodel.py  ionizationmodel.py
lib/python/picongpu/picmi/interaction/ionization/fieldionization/: ADK.py  BSI.py  keldysh.py
lib/python/picongpu/picmi/lasers/: __init__.py  base_laser.py  dispersive_pulse_laser.py  from_openpmd_pulse_laser.py  gaussian_laser.py  plane_wave_laser.py  polarization_type.py  twts_laser.py
lib/python/picongpu/picmi/output/: auto.py
lib/python/picongpu/plugins/data/: phase_space.py
lib/python/picongpu/plugins/plot_mpl/: phase_space_visualizer.py
lib/python/picongpu/pypicongpu/: __init__.py  collisions.py  customuserinput.py  grid.py  laser.py  movingwindow.py  runner.py  simulation.py  util.py  walltime.py
lib/python/picongpu/pypicongpu/field_solver/: DefaultSolver.py  Lehe.py  Yee.py  __init__.py
lib/python/picongpu/pypicongpu/output/: __init__.py  auto.py  binning.py  checkpoint.py  energy_histogram.py  macro_particle_count.py  openpmd_plugin.py  particle_functor.py  phase_space.py  plugin.py  png.py  radiation.py  timestepspec.py
lib/python/picongpu/pypicongpu/rendering/: __init__.py  pmaccprinter.py  renderedobject.py  renderer.py
lib/python/picongpu/pypicongpu/species/: __init__.py  initmanager.py  species.py
lib/python/picongpu/pypicongpu/species/attribute/: attribute.py  boundelectrons.py  momentum.py  momentum_prev_1.py  position.py  radiation_mask.py  weighting.py
lib/python/picongpu/pypicongpu/species/constant/: charge.py  constant.py  densityratio.py  elementproperties.py  groundstateionization.py  mass.py  synchrotron.py
lib/python/picongpu/pypicongpu/species/constant/ionizationcurrent/: ionizationcurrent.py  none_.py
lib/python/picongpu/pypicongpu/species/constant/ionizationmodel/: ADKcircularpolarization.py  ADKlinearpolarization.py  BSI.py  BSIeffectiveZ.py  BSIstarkshifted.py  ionizationmodel.py  keldysh.py  thomasfermi.py
lib/python/picongpu/pypicongpu/species/operation/: __init__.py  densityoperation.py  noboundelectrons.py  operation.py  setchargestate.py  simpledensity.py  simplemomentum.py
lib/python/picongpu/pypicongpu/species/operation/densityprofile/: __init__.py  cylinder.py  densityprofile.py  foil.py  free_formula.py  gaussian.py  uniform.py
lib/python/picongpu/pypicongpu/species/operation/densityprofile/plasmaramp/: __init__.py  exponential.py  none.py  plasmaramp.py
lib/python/picongpu/pypicongpu/species/operation/layout/: __init__.py  layout.py  one_position.py  random.py
lib/python/picongpu/pypicongpu/species/operation/momentum/: drift.py  temperature.py
lib/python/picongpu/pypicongpu/species/util/: element.py
lib/python/test/setups/ESKHI/: config.py  main.py
lib/python/test/setups/MI/: main.py
lib/python/test/testsuite/: _checkData.py
lib/python/test/testsuite/Math/: _searchData.py
lib/python/test/testsuite/Output/: _manager.py
lib/python/test/testsuite/Reader/: cmakeFlagReader.py  dataReader.py  jsonReader.py  paramReader.py  readFiles.py
share/picongpu/unit/: CMakeLists.txt  toSlice.cpp
share/picongpu/unit/dimensional_tests/: CMakeLists.txt  MoveParticle.cpp  MovingWindow.cpp  TWTSTight.cpp  radiationFormFactor.cpp  radiationWindowFunction.cpp  shape.cpp
share/picongpu/unit/non_dimensional_tests/: CMakeLists.txt  binningAxis.cpp  toSlice.cpp
share/picongpu/unit/non_dimensional_tests/atomicPhysics/: TestAtomicConfigNumber.cpp
share/picongpu/unit/non_dimensional_tests/metadata/: metadataCLI.cpp  metadataDescription.cpp
test/: hasCudaGlobalKeyword  hasExtLibIncludeBrackets  hasWrongDoxygenStyle
(+1430 files in other folders)
